--- a/css/screen.less
+++ b/css/screen.less
@@ -23,16 +23,40 @@ a {
 }
 
 .header {
+    margin-bottom: 2em;
     .site-title {
-        font-size: 16px;
-        font-weight: 100;
         font-family: @sans;
         color: black;
     }
+    .twitter {
+        float: right;
+    }
 }
 
+.top-image {
+    max-width: 100%;
+    height: auto;
+    margin: 2em 0 1em;
+}
+.titles {
+    margin: 0 0 2.5em;
+}
+.datestamp {
+    color: #999;
+    font-size: 50%;
+    font-weight: 400;
+    white-space: nowrap;
+}
+.post-title {
+    margin-top: 0;
+    line-height: 115%;
+}
+.post-subtitle {
+    line-height: 130%;
+    font-weight: 500;
+    margin-top: -1em;
+}
 .post-content {
-    padding-top: 0.5em;
     h3 {
         margin-top: 2em;
     }
