Changed site name again and added CNAME record

--- a/css/screen.less
+++ b/css/screen.less
@@ -21,6 +21,9 @@ a {
     width: 95%;
     margin: 0 auto;
 }
+.nowrap {
+    white-space: nowrap;
+}
 
 .header {
     margin-bottom: 2em;
@@ -30,6 +33,23 @@ a {
     }
     .twitter {
         float: right;
+    }
+}
+
+.intro {
+    font-size: 24px;
+    line-height: 120%;
+    color: #999;
+    font-weight: 400;
+}
+.posts {
+    li {
+        margin-bottom: 0.3em;
+        line-height: 120%;
+        .tags {
+            font-size: 80%;
+            color: #999;
+        }
     }
 }
 
