Posted it up yo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     
     <div class="header">
     <div class="center">
-        <a class="site-title" href="/">This is <strong>not robotic.</strong></a>
+        <a class="site-title" href="/">this is <strong>not robotic</strong></a>
         <a class="twitter" href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a>
     </div>
     </div>
