--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
         {% endif %}
     </div>
     <div class="post-content">
+        <!-- <p class="tags">Tagged {{ page.tags | join: ", " }}</p> -->
         {{ content }}
     </div>
     <div class="comments">
