Changes to some of the layout, and to the how to blog post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     
     <div class="header">
     <div class="center">
-        <a class="site-title" href="/">this is <strong>not robotic</strong></a>
+        <a class="site-title" href="/">i'm <strong>not robotic</strong> but i make robots do a lot of my work</a>
         <a class="twitter" href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a>
     </div>
     </div>
@@ -30,7 +30,7 @@
     
     <div class="footer">
         <div class="center">
-            Le foot.
+            <small style="color:#999; display:block; margin-top:5em;">&copy; Jason or something, just don't take my shit and pretend like you wrote it, k?</small>
         </div>
     </div>
 </div>
