--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     
     <div class="header">
     <div class="center">
-        <a class="site-title" href="/">i'm <strong>not robotic</strong> but i make robots do a lot of my work</a>
+        <a class="site-title" href="/">i'm <strong>not robotic</strong> but i make robots do all my work</a>
         <a class="twitter" href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a>
     </div>
     </div>
