--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
      <title>{{ page.title }}</title>
 
      <!-- syntax highlighting CSS -->
-     <link rel="stylesheet" href="/css/syntax/trac.css" type="text/css" />
+     <link rel="stylesheet" href="/css/syntax/monokai.css" type="text/css" />
 
      <!-- Homepage CSS -->
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
