--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,20 @@
      <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'> -->
      <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'>
 
+     <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30723329-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
 </head>
 <body>
 
