--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-     <title>{{ page.title }}</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>{{ page.title }}</title>
 
-     <!-- syntax highlighting CSS -->
-     <link rel="stylesheet" href="/css/syntax/monokai.css" type="text/css" />
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax/monokai.css" type="text/css" />
 
-     <!-- Homepage CSS -->
-     <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+    <!-- Homepage CSS -->
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
-     <!-- Webfonts -->
-     <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'> -->
-     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'>
+    <!-- Webfonts -->
+    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'> -->
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400italic,400,700,800,300' rel='stylesheet' type='text/css'>
 
-     <script type="text/javascript">
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-30723329-1']);
+        _gaq.push(['_setDomainName', 'notrobotic.com']);
+        _gaq.push(['_trackPageview']);
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-30723329-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
+        (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
+        })();
     </script>
 
 </head>
