New post about Baltimore and a few changes around

--- a/css/screen.less
+++ b/css/screen.less
@@ -111,6 +111,17 @@ a {
         margin-bottom: 0.5em;
     }
 
+    blockquote {
+        border-left: 4px solid #efefef;
+        margin-left: 0;
+        padding-left: 1em;
+
+        p {
+            color: #999;
+            font-size: 90%;
+        }
+    }
+
     code {
         background-color: fade(#efefef, 50%);
         border: 1px solid #efefef;
