Changed copyright footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     
     <div class="footer">
         <div class="center">
-            <small style="color:#999; display:block; margin-top:5em;">&copy; Jason or something, just don't take my shit and pretend like you wrote it, k?</small>
+            <small style="color:#999; display:block; margin-top:5em;">&copy; Jason Rhodes / If you steal my work there's almost nothing I can do to stop you</small>
         </div>
     </div>
 </div>
