--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
   font-size: 20px;
-  max-width: 30em;
+  max-width: 35em;
   margin: 0 auto 0 12%;
 }
 
@@ -20,8 +20,9 @@ header {
   text-align: right;
 }
 
-.post-container {
+.disabled-post-container {
   font-family: 'Lora', Georgia, serif;
+  line-height: 1.3em;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -29,13 +30,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-nav {
-  font-size: 0.7em;
+  font-size: 0.75em;
   font-weight: bold;
   margin: 4em 0;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
   border-style: solid;
-  border-color: #d2d2d2;
-  border-width: 1px 0 0;
+  border-color: #efefef;
+  border-width: 4px 0;
+  overflow: hidden;
 }
 
 .post-nav a[disabled] {
@@ -47,5 +49,172 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-nav .next {
-  margin-left: 1em;
+  float: right;
+}
+
+.byline {
+  font-size: 0.75em;
+  font-weight: bold;
+}
+
+li {
+  margin-bottom: 0.5em;
+}
+
+blockquote {
+  font-size: 0.85em;
+  color: #444;
+  padding-left: 1em;
+  border-left: solid 6px #efefef;
+  margin-left: 2em;
+}
+
+pre {
+  background-color: #efefef;
+  padding: 1em;
+}
+
+code {
+  background-color: #efefef;
+  font-size: 0.8em;
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !important;
+  display: inline-block;
+  color: #333;
+  font-weight: bold;
+  padding: 0.1em 0.25em;
+}
+
+pre code {
+  padding: 0;
+  background-color: transparent;
+  font-size: 0.65em;
+  font-weight: normal;
+  color: #000;
+  line-height: 1.4em;
+}
+
+/* Highlight JS Theme, "GitHub" */
+/*
+
+github.com style (c) Vasily Polovnyov <vast@whiteants.net>
+
+*/
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  color: #333;
+  background: #f8f8f8;
+  -webkit-text-size-adjust: none;
+}
+
+.hljs-comment,
+.diff .hljs-header,
+.hljs-javadoc {
+  color: #998;
+  font-style: italic;
+}
+
+.hljs-keyword,
+.css .rule .hljs-keyword,
+.hljs-winutils,
+.nginx .hljs-title,
+.hljs-subst,
+.hljs-request,
+.hljs-status {
+  color: #333;
+  font-weight: bold;
+}
+
+.hljs-number,
+.hljs-hexcolor,
+.ruby .hljs-constant {
+  color: #008080;
+}
+
+.hljs-string,
+.hljs-tag .hljs-value,
+.hljs-phpdoc,
+.hljs-dartdoc,
+.tex .hljs-formula {
+  color: #d14;
+}
+
+.hljs-title,
+.hljs-id,
+.scss .hljs-preprocessor {
+  color: #900;
+  font-weight: bold;
+}
+
+.hljs-list .hljs-keyword,
+.hljs-subst {
+  font-weight: normal;
+}
+
+.hljs-class .hljs-title,
+.hljs-type,
+.vhdl .hljs-literal,
+.tex .hljs-command {
+  color: #458;
+  font-weight: bold;
+}
+
+.hljs-tag,
+.hljs-tag .hljs-title,
+.hljs-rules .hljs-property,
+.django .hljs-tag .hljs-keyword {
+  color: #000080;
+  font-weight: normal;
+}
+
+.hljs-attribute,
+.hljs-variable,
+.lisp .hljs-body {
+  color: #008080;
+}
+
+.hljs-regexp {
+  color: #009926;
+}
+
+.hljs-symbol,
+.ruby .hljs-symbol .hljs-string,
+.lisp .hljs-keyword,
+.clojure .hljs-keyword,
+.scheme .hljs-keyword,
+.tex .hljs-special,
+.hljs-prompt {
+  color: #990073;
+}
+
+.hljs-built_in {
+  color: #0086b3;
+}
+
+.hljs-preprocessor,
+.hljs-pragma,
+.hljs-pi,
+.hljs-doctype,
+.hljs-shebang,
+.hljs-cdata {
+  color: #999;
+  font-weight: bold;
+}
+
+.hljs-deletion {
+  background: #fdd;
+}
+
+.hljs-addition {
+  background: #dfd;
+}
+
+.diff .hljs-change {
+  background: #0086b3;
+}
+
+.hljs-chunk {
+  color: #aaa;
 }
