--- a/views/blog-home.jade
+++ b/views/blog-home.jade
@@ -12,3 +12,5 @@ block body
         a(href=post.url)= post.title
         span= ' '
         small.date= '[' + post.prettyDate + ']'
+
+    - posts.reverse()
