--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html.no-js
     meta(name='description', content='A site for a rhodesjason')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
+    link(rel='icon' type='image/png' href='/assets/images/hypercard.png')
+    
     block styles
       link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,900,400italic')
       link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic')
