--- a/views/home.jade
+++ b/views/home.jade
@@ -4,20 +4,20 @@ block body
   div.container.home-container
     != content
 
-  h3 
-    span Recent
-    span(style='position:relative; top:-3px;')= "* "
-    span blog posts
-  ul
-    - posts.reverse()
-    - posts = posts.slice(0, 5)
-    for post in posts
-      li
-        a(href=post.url)= post.title
-        small.date= ' :=>: ' + post.prettyDate
+    h3 
+      span Recent
+      span(style='position:relative; top:-3px;')= "* "
+      span blog posts
+    ul
+      - posts.reverse()
+      - posts = posts.slice(0, 5)
+      for post in posts
+        li
+          a(href=post.url)= post.title
+          small.date= ' / ' + post.prettyDate
 
-    - posts.reverse()
+      - posts.reverse()
 
-  p 
-    em *
-      small Recency is relative, ok?
+    p 
+      em *
+        small Recency is relative, ok?
