--- a/views/post.jade
+++ b/views/post.jade
@@ -25,5 +25,10 @@ block body
 
   div.comments
     p.comments-intro
-      em Warning: Comments ahead. I'll delete comments that I think are shitty and will close comments whenever I think it's getting stupid. Thanks!
+      span.warning-icon ☣
+      em
+        strong Warning: 
+        span Comments ahead. I kind of hate comments so I might delete them. 
+      small.shrug ¯\_(ツ)_/¯
+    
     include includes/disqus.html
