Publishing the site

--- a/views/post.jade
+++ b/views/post.jade
@@ -28,7 +28,6 @@ block body
       span.warning-icon ☣
       em
         strong Warning: 
-        span Comments ahead. I kind of hate comments so I might delete them. 
-      small.shrug ¯\_(ツ)_/¯
+        span Comments ahead. Be nice or else. 
     
     include includes/disqus.html
