--- a/views/blog-home.jade
+++ b/views/blog-home.jade
@@ -2,15 +2,11 @@ extends layout
 
 block body
   div.container.blog-container
+    
+    h2 Blog posts
+
     != content
 
-    h3 Blog posts
-    ul
-      - posts.reverse()
-      for post in posts
-        li
-          a(href=post.url)= post.title
-          span= ' '
-          small.date= '[' + post.prettyDate + ']'
-
-      - posts.reverse()
+    - posts.reverse()
+    include includes/postlist.jade
+    - posts.reverse()
