Publishing the site

--- a/views/home.jade
+++ b/views/home.jade
@@ -6,7 +6,7 @@ block body
     div.home-intro
       img.home-intro-pic(src='/assets/images/rhodesjason-01-glitched.square.256.png' alt='Jason profile shot')
       div.home-intro-text
-        marquee(scrollamount=15) Hi, I'm Jason, and this is my HTML web site. ✌ ⚾ 🚀 ⌚ 🃏
+        marquee(scrollamount=15) Hi, I'm Jason, and this is my HTML web site. ✌ 🚀 ⚾ ⏳ 🃏
 
     div.home-about.col.half
       h3 About me
