--- a/views/includes/postlist.jade
+++ b/views/includes/postlist.jade
@@ -4,4 +4,4 @@ ul.post-list
       a(href=post.url)
         small.post-date= post.prettyDate
         h3= post.title            
-        div.post-teaser!= post.teaser
+        p.post-teaser!= post.teaser
