Updated and built site

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,8 +13,7 @@ html.no-js
     link(rel='icon' type='image/png' href='/assets/images/hypercard.png')
     
     block styles
-      link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,400italic')
-      link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic')
+      link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,100' type='text/css')
       link(rel='stylesheet', href='/assets/css/style.css')
 
     //- Google Analytics: change UA-XXXXX-X to be your site's ID.
