--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
-  background-color: #e3edf2;
-  font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  background-color: #e1ded7; /* #e3edf2; */
+  font-family: 'Roboto', Helvetica, sans-serif;
   font-size: 20px;
+  line-height: 1.4;
   max-width: 95%;
   margin: 0 auto;
   padding-bottom: 5em;
@@ -32,7 +33,7 @@ li {
 header {
   font-size: 0.75em;
   padding: 0.75em 0;
-  font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
 }
 
 .logo {
@@ -43,12 +44,12 @@ header {
   font-weight: normal;
   font-weight: bold;
   background: url("../images/hypercard.png") left 2px no-repeat;
+  margin-right: 10px;
 }
 
 .nav {
   display: inline-block;
   line-height: 31px;
-  float: right;
   text-align: right;
 }
 
@@ -63,9 +64,9 @@ header {
   position: relative;
 }
 
-.home-intro-pic {
-  float: left;
-  width: 25%;
+.home-about img {
+  display: inline-block;
+  width: 50px;
   height: auto;
 }
 
@@ -87,7 +88,7 @@ header {
 }
 
 .home-about ul {
-  padding-left: 0.5em;
+  padding-left: 0;
 }
 
 .home-about li {
@@ -100,17 +101,23 @@ header {
 .home-about li:before {
   content: '☆ ';
   position: absolute;
-  top: -3px;
+  top: -1px;
   left: 0;
 }
 
 .disabled-post-container {
-  font-family: 'Lora', Georgia, serif;
+  /*font-family: 'Lora', Georgia, serif;*/
   line-height: 1.3em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  /*font-family: 'Source Sans Pro', Helvetica, sans-serif;*/
+}
+
+h3.home-section-header {
+  font-size: 2em;
+  font-weight: 100;
+  margin-bottom: 0.5em;
 }
 
 .post-nav {
@@ -191,9 +198,9 @@ blockquote {
 blockquote blockquote {
   margin-left: 0;
   padding-left: 0;
-  border-left: solid 6px #e3edf2;
+  border-left: solid 6px #e1ded7;
   position: relative;
-  background-color: #e3edf2;
+  background-color: #e1ded7;
   left: -2em;
   font-style: italic;
   width: 100%;
@@ -285,13 +292,13 @@ pre code {
 
   .container {
     position: relative;
-    max-width: 35em;
-    margin: 0 auto 0 12%;
+    max-width: 45em;
+    margin: 0 auto 0 0;
   }
 
   .home-container {
-    max-width: 50em;
-    margin: 0 auto;
+    max-width: 60em;
+    margin: 0;
   }
 
   .col {
