--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,14 @@ header {
   text-decoration: none;
 }
 
+img.avatar {
+  width: 50px;
+  height: 50px;
+  float: right;
+  border-radius: 50%;
+  opacity: 0.8;
+}
+
 .home-intro {
   margin-top: 1em;
   overflow: hidden;
@@ -207,8 +215,8 @@ blockquote blockquote {
 }
 
 pre {
-  background-color: rgba(0,0,0,0.1);
-  padding: 1em;
+  /*background-color: rgba(0,0,0,0.1);*/
+  /*padding: 1em;*/
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
@@ -217,21 +225,21 @@ pre {
 }
 
 code {
-  background-color: rgba(0,0,0,0.1);
+  /*background-color: rgba(0,0,0,0.1);*/
   font-size: 0.8em;
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace !important;
+  font-family: "Roboto Mono", Consolas, Menlo, "Courier New", Courier, monospace !important;
   display: inline-block;
-  color: #333;
-  font-weight: bold;
-  padding: 0.1em 0.25em;
+  /*color: #333;*/
+  /*font-weight: bold;*/
+  /*padding: 0.1em 0.25em;*/
 }
 
 pre code {
-  padding: 0;
-  background-color: transparent;
+  padding: 1em 1.5em;
+  /*background-color: transparent;*/
   font-size: 0.65em;
-  font-weight: normal;
-  color: #000;
+  /*font-weight: normal;*/
+  /*color: #000;*/
   line-height: 1.4em;
 }
 
@@ -355,130 +363,4 @@ pre code {
     position: relative;
     top: -5em;
   }
-}
-
-/* Highlight JS Theme, "GitHub" */
-/*
-
-github.com style (c) Vasily Polovnyov <vast@whiteants.net>
-
-*/
-
-.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  color: #333;
-  background: #f8f8f8;
-  -webkit-text-size-adjust: none;
-}
-
-.hljs-comment,
-.diff .hljs-header,
-.hljs-javadoc {
-  color: #998;
-  font-style: italic;
-}
-
-.hljs-keyword,
-.css .rule .hljs-keyword,
-.hljs-winutils,
-.nginx .hljs-title,
-.hljs-subst,
-.hljs-request,
-.hljs-status {
-  color: #333;
-  font-weight: bold;
-}
-
-.hljs-number,
-.hljs-hexcolor,
-.ruby .hljs-constant {
-  color: #008080;
-}
-
-.hljs-string,
-.hljs-tag .hljs-value,
-.hljs-phpdoc,
-.hljs-dartdoc,
-.tex .hljs-formula {
-  color: #d14;
-}
-
-.hljs-title,
-.hljs-id,
-.scss .hljs-preprocessor {
-  color: #900;
-  font-weight: bold;
-}
-
-.hljs-list .hljs-keyword,
-.hljs-subst {
-  font-weight: normal;
-}
-
-.hljs-class .hljs-title,
-.hljs-type,
-.vhdl .hljs-literal,
-.tex .hljs-command {
-  color: #458;
-  font-weight: bold;
-}
-
-.hljs-tag,
-.hljs-tag .hljs-title,
-.hljs-rules .hljs-property,
-.django .hljs-tag .hljs-keyword {
-  color: #000080;
-  font-weight: normal;
-}
-
-.hljs-attribute,
-.hljs-variable,
-.lisp .hljs-body {
-  color: #008080;
-}
-
-.hljs-regexp {
-  color: #009926;
-}
-
-.hljs-symbol,
-.ruby .hljs-symbol .hljs-string,
-.lisp .hljs-keyword,
-.clojure .hljs-keyword,
-.scheme .hljs-keyword,
-.tex .hljs-special,
-.hljs-prompt {
-  color: #990073;
-}
-
-.hljs-built_in {
-  color: #0086b3;
-}
-
-.hljs-preprocessor,
-.hljs-pragma,
-.hljs-pi,
-.hljs-doctype,
-.hljs-shebang,
-.hljs-cdata {
-  color: #999;
-  font-weight: bold;
-}
-
-.hljs-deletion {
-  background: #fdd;
-}
-
-.hljs-addition {
-  background: #dfd;
-}
-
-.diff .hljs-change {
-  background: #0086b3;
-}
-
-.hljs-chunk {
-  color: #aaa;
 }
