--- a/views/home.jade
+++ b/views/home.jade
@@ -7,11 +7,21 @@ block body
       h3.home-section-header about me
       != content
 
+      h3.home-section-header events
+      ul
+        li 
+          a(href="http://charmcityjs.com") charmCityJs
+          span : every first wednesday at 7pm
+        li
+          a(href="http://nodeschool.io/baltimore") nodeschool
+          span : returning this december!
+        li Refresh Baltimore: i'm speaking this november
+
     div.home-recent-posts.col.half.end
       h3.home-section-header some blog posts
 
       - posts.reverse()
-      - posts = posts.slice(0, 3)
+      - posts = posts.slice(0, 5)
       
       include includes/postlist.jade
 
