--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,8 @@ html.no-js
     
     block styles
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,100' type='text/css')
+      link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' type='text/css')
+      link(rel='stylesheet', href='/assets/css/hljs/tomorrow-night.css')
       link(rel='stylesheet', href='/assets/css/style.css')
 
     //- Google Analytics: change UA-XXXXX-X to be your site's ID.
@@ -31,6 +33,8 @@ html.no-js
           a(href='/blog') blog
           sep= ' | '
           a(href="http://speakerdeck.com/rhodesjason") slides
+
+        img.avatar(src="/assets/images/rhodesjason-01-glitched.square.256.png")
 
     block body
       p this is just a rhodesjasondotcom
